--- a/src/manage/view/signin.html
+++ b/src/manage/view/signin.html
@@ -14,8 +14,8 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/utils/md5.js"></script>
 <script type="text/javascript">
-<!-- #raw
-function show_error(msg){
+//#raw
+function show_error(msg) {
 	if (msg===null || msg==='') {
 		$('#error_msg').hide();
 	}
@@ -26,16 +26,16 @@ function show_error(msg){
 }
 
 function validate_form() {
-	if ($('#email').val()==''){
+	if ($('#email').val()=='') {
 		show_error('Please enter your email');
 		return false;
 	}
 	var pw = $('#passwd').val();
-	if (pw==''){
+	if (pw=='') {
 		show_error('Please enter your password');
 		return false;
 	}
-	if (pw.length<6){
+	if (pw.length<6) {
 		show_error('Password must be at least 6 characters');
 		return false;
 	}
@@ -45,11 +45,8 @@ function validate_form() {
 	$('#password').val(MD5(pw));
 	return true;
 }
-
-#end raw -->
-</script>
-<script type="text/javascript">
-jQuery(function(){
+//#end raw
+jQuery(function() {
 	show_error('${error}');
 });
 </script>
@@ -80,12 +77,12 @@ jQuery(function(){
             </select>
           </p>
           <p><input type="hidden" name="redirect" value="${redirect}" /><input type="hidden" id="password" name="password" /><input id="signin" type="submit" value="Sign In" /> 
-          	<span id="loading" class="loading">Processing, please wait...</span></p>
+          	<span id="loading" class="loading">Signing in, please wait...</span></p>
         </fieldset>
       </form>
       <p><a href="register">Register</a> | <a href="#">Lost your password?</a></p>
-      #if $varExists('google_url')
-        <p>Don't want to register? try <a href="${google_url}">sign in with a Google account</a>!</p>
+      #if $varExists('google_signin_url')
+      <p>Don't want to register? <a href="${google_signin_url}">Sign in with a Google account!</a></p>
       #end if
 	  <!-- InstanceEndEditable -->
 	</div>
