add send mail, add view of 'forgot, sent', add model.py, update view of manage app

--- a/src/manage/view/forgot.html
+++ b/src/manage/view/forgot.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Reset password - ${site.name}</title>
+<title>Forgot your password? - ${site.name}</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/static/css/blueprint/screen.css" type="text/css" media="screen, projection">
 <!--[if lt IE 8]>
@@ -25,27 +25,16 @@ function show_error(msg) {
 }
 
 function validate_form() {
-	var pw1 = $('#password1').val();
-	var pw2 = $('#password2').val();
-	if (pw1=='') {
-		show_error('Please enter your password');
+	if ($('#email').val()=='') {
+		show_error('Please enter your email');
 		return false;
 	}
-	if (pw1.length<6) {
-		show_error('Password must be at least 6 characters');
+	if ($('#recaptcha_response_field').val()=='') {
+		show_error('Please enter the captcha words');
 		return false;
 	}
-	if (pw1!=pw2) {
-		show_error('The two passwords are not match');
-		return false;
-	}
-	if ($('#nicename').val()=='') {
-		show_error('Please enter your nice name');
-		return false;
-	}
-	$('#password').val(MD5(pw1));
 	show_error(null);
-	$('#reset').hide();
+	$('#forgot').hide();
 	$('#loading').show();
 	return true;
 }
@@ -66,13 +55,28 @@ jQuery(function() {
 	</div>
     <div class="span-12 prepend-6 last">
       <!-- InstanceBeginEditable name="MainRegion" -->
-      <form name="resetForm" id="resetForm" method="post" action="/manage/reset" onsubmit="return validate_form()">
+      <form name="forgotForm" id="forgotForm" method="post" action="/manage/forgot" onsubmit="return validate_form()">
         <fieldset>
-          <legend>Reset your password</legend>
+          <legend>Forgot your password?</legend>
           <div id="error_msg" class="error" style="display:none"></div>
-          <p><label for="password1">Password:</label><br/><input id="password1" name="password1" type="password" maxlength="20" class="text" /></p>
-          <p><label for="password2">Re-type password:</label><br/><input id="password2" name="password2" type="password" maxlength="20" class="text" /></p>
-          <p><input id="password" name="password" type="hidden" /><input id="token" name="token" type="hidden" /><input id="reset" type="submit" value="Reset Password" /><span id="loading" class="loading">Processing, please wait...</span></p>
+		  <div class="info">If you forgot your password of your Google account, please <a href="https://www.google.com/accounts/recovery" target="_blank">recover your password from Google</a>.</div>
+          <p><label for="email">Enter your email:</label><br/><input id="email" name="email" type="text" value="${email}" maxlength="50" class="text" /></p>
+          <p>
+            <div id="recaptcha_widget">
+              <div id="recaptcha_image" style="border: 1px solid #ccc"></div>
+              <div><a href="javascript:Recaptcha.reload()">Get another CAPTCHA</a></div>
+              <label for="captcha">Enter the words above:</label><br/><input id="recaptcha_response_field" name="recaptcha_response_field" type="text" maxlength="50" class="text" />
+            </div>
+          </p>
+<script type="text/javascript">
+var RecaptchaOptions = {
+  theme : 'custom',
+  custom_theme_widget: 'recaptcha_widget'
+};
+</script>
+<script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=${recaptcha_public_key}"></script>
+          <p>We will send you email contains instructions of how to reset your password.</p>
+          <p><input id="forgot" type="submit" value="Next" /><span id="loading" class="loading">Processing, please wait...</span></p>
         </fieldset>
       </form>
 	  <!-- InstanceEndEditable -->
