--- a/src/manage/view/register.html
+++ b/src/manage/view/register.html
@@ -67,7 +67,7 @@ jQuery(function() {
       <div class="span-9" style="padding:12px 0px">
         <a href="http://www.expressme.org/" target="_blank"><img src="/static/image/expressme.gif" width="326" height="60" /></a>
 	  </div>
-	  <div class="span-9 last large" style="text-align:right"><a href="/">廖雪峰的官方网站</a> | <a href="/manage/register">Register</a> | <a href="/manage/signin">登录</a></div>
+	  <div class="span-9 last large" style="text-align:right"><a href="/">${site.name}</a> | <a href="/manage/register">Register</a> | <a href="/manage/signin">Sign In</a></div>
 	</div>
     <div class="span-12 prepend-6 last">
       <!-- InstanceBeginEditable name="MainRegion" -->
@@ -90,7 +90,7 @@ jQuery(function() {
 	</div>
     <div class="span-16 prepend-4 last" style="margin:5px 0px"><hr/></div>
     <div class="span-14 prepend-5 last">
-	  <div class="span-8" style="line-height:30px; text-align:center">Copyright&copy;2010, <a href="http://www.expressme.org/" target="_blank">ExpressMe</a></div>
+	  <div class="span-8" style="line-height:30px; text-align:center"><a href="http://www.expressme.org/" target="_blank">ExpressMe</a> copyright&copy;2010, all rights reserved.</div>
 	  <div class="span-4 last"><a href="http://code.google.com/appengine/" target="_blank"><img src="http://code.google.com/appengine/images/appengine-silver-120x30.gif" 
 alt="Powered by Google App Engine" width="120" height="30" align="absmiddle"/></a></div>
 	</div>
