--- a/src/manage/view/reset.html
+++ b/src/manage/view/reset.html
@@ -79,7 +79,7 @@ jQuery(function() {
 	</div>
     <div class="span-16 prepend-4 last" style="margin:5px 0px"><hr/></div>
     <div class="span-14 prepend-5 last">
-	  <div class="span-8" style="line-height:30px; text-align:center"><a href="http://www.expressme.org/" target="_blank">ExpressMe</a> copyright&copy;2010, all rights reserved.</div>
+	  <div class="span-9" style="line-height:30px; text-align:center"><a href="http://www.expressme.org/" target="_blank">ExpressMe</a> version ${version}, copyright&copy;2010.</div>
 	  <div class="span-4 last"><a href="http://code.google.com/appengine/" target="_blank"><img src="http://code.google.com/appengine/images/appengine-silver-120x30.gif" 
 alt="Powered by Google App Engine" width="120" height="30" align="absmiddle"/></a></div>
 	</div>
