--- a/src/manage/static/css/manage.css
+++ b/src/manage/static/css/manage.css
@@ -1,5 +1,8 @@
 @charset "utf-8";
 /* Custom CSS Document */
+body { background:#f9f9f9 url(/manage/static/bg.gif) repeat-x; font-family:Arial; font-size:12px; height:100%; }
+
+#container { min-height: 100% }
 
 a:link    {color: #2175ac; text-decoration:none}
 a:visited {color: #2175ac; text-decoration:none}
@@ -7,7 +10,7 @@ a:hover   {color: #d54e4d; text-decoration:none}
 a:active  {color: #d54e4d; text-decoration:none}
 a:focus   {color: #d54e4d; text-decoration:none}
 
-#header { color:#999; font-size:16px }
+#header { color:#999; font-size:16px; padding-top:16px; }
 
 #header a:link    {color: #ccc; text-decoration:none}
 #header a:visited {color: #ccc; text-decoration:none}
@@ -15,7 +18,7 @@ a:focus   {color: #d54e4d; text-decoration:none}
 #header a:active  {color: #fff; text-decoration:none}
 #header a:focus   {color: #fff; text-decoration:none}
 
-#footer { color:#999; padding:10px 5px; font-size:16px; font-style:italic; background-color:#464646 }
+#footer { color:#999; height:40px; line-height:40px; font-size:16px; font-style:italic; background-color:#464646; }
 
 #footer a:link    {color: #ccc; text-decoration:none}
 #footer a:visited {color: #ccc; text-decoration:none}
@@ -28,8 +31,8 @@ a:focus   {color: #d54e4d; text-decoration:none}
 .box-round { -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }  
 .box-round-top-left-corner { -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; }
 
-.app-menu-show { background-image:url(/manage/static/show.png); background-repeat:no-repeat; background-position:96% 50%; }
-.app-menu-hide { background-image:url(/manage/static/hide.png); background-repeat:no-repeat; background-position:96% 50%; }
+.app-menu-show { background-image:url(/manage/static/image/show.png); background-repeat:no-repeat; background-position:96% 50%; }
+.app-menu-hide { background-image:url(/manage/static/image/hide.png); background-repeat:no-repeat; background-position:96% 50%; }
 
 .app-menu { border:1px solid #E3E3E3; margin-bottom:16px; background-color:#FFF }
 .app-menu-title { padding:3px 6px; background-color:#F1F1F1; font-weight:bold; border-bottom:1px solid #E3E3E3 }
