--- a/src/manage/view/manage.html
+++ b/src/manage/view/manage.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="/static/css/blueprint/screen.css" type="text/css" media="screen, projection"/>
 <!--[if lt IE 8]><link rel="stylesheet" href="/static/css/blueprint/ie.css" type="text/css" media="screen, projection"/><![endif]-->
-<link rel="stylesheet" href="/manage/static/manage.css" type="text/css" media="screen, projection"/>
+<link rel="stylesheet" href="/manage/static/css/manage.css" type="text/css" media="screen, projection"/>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="/manage/static/js/manage.js"></script>
 <script type="text/javascript">
