fix signin/register error.

--- a/src/manage/view/manage.html
+++ b/src/manage/view/manage.html
@@ -39,7 +39,7 @@ jQuery(function(){
       #end for
     </div>
     <div class="span-20 last">
-      ${__embeded__raw__}
+      ${__embeded____raw__}
     </div>
     <div id="footer" class="span-24 last">&nbsp;Thank you for creating with <a href="http://www.expressme.org/" target="_blank">Express Me</a>. | <a href="http://www.expressme.org/wiki/" target="_blank">Documentation</a> | <a href="http://code.google.com/p/express-me/issues/list" target="_blank">Report Issues</a><span style="float:right">Version ${version}&nbsp;</span></div>
   </div>
