--- a/src/manage/view/register.html
+++ b/src/manage/view/register.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/manage/static/css/single.css" type="text/css" media="screen, projection">
 <!-- InstanceBeginEditable name="head" -->
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script type="text/javascript" src="/static/js/utils/md5.js"></script>
+<script type="text/javascript" src="/manage/static/js/md5.js"></script>
 <script type="text/javascript">
 //#raw
 function show_error(msg) {
