--- a/src/manage/view/manage_profile.html
+++ b/src/manage/view/manage_profile.html
@@ -1,34 +1,36 @@
 <!-- begin manage_profile.html -->
 #raw
-<script type="text/javascript" src="/static/js/utils/md5.js"></script>
-<script type="text/javascript" src="/static/js/utils/str.js"></script>
 <script type="text/javascript">
-function show_error(msg) {
-    $("#err_msg").html(msg);
-    $("#err_msg").show();
-}
 function validate_form(){
-    nicename = $("#nicename").val();
-    if (is_blank(nicename)) {
-        show_error("Please enter your nice name.");
+    if (is_blank($('#nicename').val())) {
+        set_error('Please enter your nice name.');
         return false;
     }
-    var p1 = $("#password1").val();
-    var p2 = $("#password2").val();
-    if (p1!="" || p2!="") {
+    var p1 = $('#password1').val();
+    var p2 = $('#password2').val();
+    if (p1!='' && p2!='') {
         if (p1.length<6) {
-            show_error("The password should be at least 6 characters long.");
+            show_error('The password should be at least 6 characters long.');
             return false;
         }
         if (p1!=p2) {
-            show_error("Please enter the same password in the two password fields.");
+            show_error('Please enter the same password in the two password fields.');
             return false;
         }
-        $("#passwd").val(MD5(p1));
+        $('#password').val(MD5(p1));
     }
-    else {
-        $("#passwd").val("");
+	else if (p1==='' && p2==='') {
+        $('#password').val('');
     }
+	else {
+		show_error('Please enter the same password in the two password fields.');
+    	return false;
+	}
+	set_info();
+	set_warning();
+	set_error();
+	$('#save_profile').hide();
+	$('#loading').show();
     return true;
 }
 </script>
@@ -41,10 +43,6 @@ function validate_form(){
 <input type="hidden" name="passwd" id="passwd" />
   <div class="panel-title">Your Profile</div>
   <div class="panel-content">
-    #if $varExists('message')
-    <div class="notice">${message}</div>
-    #end if
-    <div id="err_msg" class="error" style="display:none"></div>
     <div class="form-field">
       <div class="form-field-title">Role <em>(cannot change)</em>:</div>
       <div class="form-field-input"><select name="role" id="role" value="${user.role}" style="width:360px" disabled="disabled">
@@ -70,7 +68,9 @@ function validate_form(){
     </div>
     <div class="form-field">
       <div class="form-field-input">
-        <button type="submit" name="submit">Save</button>
+      	<input name="password" type="hidden" id="password"/>
+        <button id="save_profile" type="submit" name="submit">Save</button>
+        <span id="loading" class="loading">Saving, please wait...</span>
       </div>
     </div>
   </div>
