--- a/src/manage/view/manage.html
+++ b/src/manage/view/manage.html
@@ -59,7 +59,7 @@ jQuery(function(){
         ${__embeded____raw__}
       </div>
     </div>
-    <div id="footer" class="span-24 last">&nbsp;Thank you for creating with <a href="http://www.expressme.org/" target="_blank">Express Me</a>. | <a href="http://www.expressme.org/wiki/" target="_blank">Documentation</a> | <a href="http://code.google.com/p/express-me/issues/list" target="_blank">Report Issues</a><span style="float:right">Version ${version}&nbsp;</span></div>
+    <div id="footer" class="span-24 last"><div>Thank you for creating with <a href="http://www.expressme.org/" target="_blank">Express Me</a>. | <a href="http://www.expressme.org/wiki/" target="_blank">Documentation</a> | <a href="http://code.google.com/p/express-me/issues/list" target="_blank">Report Issues</a><span style="float:right">Version ${version}</span></div></div>
   </div>
 </body>
 </html>
