--- a/src/manage/view/signin.html
+++ b/src/manage/view/signin.html
@@ -66,7 +66,7 @@ jQuery(function() {
         <fieldset>
           <legend>Please sign in</legend>
           <div id="error_msg" class="error" style="display:none"></div>
-          <p><label for="email">Email</label><br/><input id="email" name="email" type="text" maxlength="50" class="text" /></p>
+          <p><label for="email">Email</label><br/><input id="email" name="email" type="text" maxlength="50" class="text" value="${email}" /></p>
           <p><label for="passwd">Password</label><br/><input id="passwd" name="passwd" type="password" maxlength="20" class="text" /></p>
           <p><label for="expires">Store for</label><br/>
             <select id="expires" name="expires">
